@@ -9,7 +9,7 @@ CFLAGS = -Wall -Wextra -std=c++14 `pkg-config --cflags sdl2 SDL2_image`
 LDLIBS = `pkg-config --libs sdl2 SDL2_image `
 
 PROG = sdl_game
-OBJ = main.o game.o texture_manager.o
+OBJ = main.o game.o sdl_game_object.o player.o texture_manager.o
 
 %.o: %.cc
 	$(CC) -c -o $@ $< $(CFLAGS) $(LDLIBS)
