@@ -3,14 +3,22 @@
 #
 
 
-2019-01-31 -> add texture_manager and use it
+
+2019-01-31 -> cpp:
+	      add some more stuff regarding chapter 3
+
+2019-01-31 -> cpp:
+	      add texture_manager and use it
 	      finalize example based on chapter 2
 	      tag "end_of_chapter_02"
 
-2019-01-27 -> finalize example based on chapter 1
+2019-01-27 -> cpp:
+	      finalize example based on chapter 1
 	      tag "end_of_chapter_01"
 
 2019-01-26 -> some reorganisation
+
+	      cpp:
 	      add a cpp folder for the next trys
 	      add sdl_book to cpp (playground)
 	      add some useful links
